# ETF_Rotation

./: .env.example  .gitignore  README.md  pyproject.toml
config/: etf_pool.json  etf_pool_expanded_a_share.json  macro_indicators.json  project.json  sector_indices.json
docs/: ALLOCATION_VARIANT_RECORD.md  ETF_POOL_EXPANSION_RECORD.md  EXPANDED_POOL_BACKTEST_RECORD.md  FACTOR_WEIGHT_TUNING_RECORD.md  LONG_SAMPLE_2019_BACKTEST_RECORD.md  MACRO_FACTOR_RECORD.md  MACRO_OVERLAY_RECORD.md  MACRO_SECTOR_DATA_RECORD.md  MCP_DATA_EXTRACTION_RECORD.md  ML_MODEL_EVALUATION_RECORD.md  ML_REGIME_OVERLAY_RECORD.md  MOMENTUM_CANDIDATE_VALIDATION_RECORD.md  MOMENTUM_RISK_TUNING_RECORD.md  PHASE1_RECORD.md  PHASE2_RECORD.md  PROJECT_PLAN.md  REAL_IFIND_BACKTEST_RECORD.md  SINGLE_YEAR_PERFORMANCE_RECORD.md
scripts/: collect_ifind_research_data.py  compare_allocation_variants.py  evaluate_expanded_ml_regime_overlay.py  evaluate_expanded_pool.py  evaluate_long_sample.py  evaluate_macro_factor.py  evaluate_macro_overlay.py  evaluate_ml_models.py  evaluate_ml_regime_overlay.py  extract_mcp_share_data.py  refresh_ifind_incremental.py  report_single_year_performance.py  tune_factor_weights.py  tune_momentum_risk.py  validate_momentum_candidate.py
tests/: test_allocation_variant_comparison.py  test_backtest.py  test_config.py  test_date_window.py  test_evaluate_ml_models.py  test_expanded_ml_regime_overlay.py  test_expanded_pool_backtest.py  test_factors.py  test_ifind_http.py  test_ifind_mcp_parser.py  test_long_sample_backtest.py  test_macro_factor.py  test_macro_overlay.py  test_ml.py  (+10 more)
(+31 files in other folders)
