[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-rotation"
version = "0.1.0"
description = "A-share industry and style ETF rotation research system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
etf-rotation-collect = "etf_rotation.cli.collect:main"
etf-rotation-validate = "etf_rotation.cli.validate:main"
etf-rotation-backtest = "etf_rotation.cli.backtest:main"

[tool.setuptools.packages.find]
where = ["src"]
